--- a/index.html
+++ b/index.html
@@ -3,40 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>熊ダメ計算機</title>
+    <title>熊ダメ計算機試作０号</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <div class="container">
     <header>
-        <h1>熊ダメ計算機試作０号</h1>
+        <h1>熊ダメ計算機試作０号<span class="ver">v1.0.2</span></h1>
         <span class="sub-title" id="editionLabel" onclick="toggleEdition()">るびぃedition</span>
     </header>
 
     <div class="section">
         <span class="title">兵士設定 & 集結バフ</span>
-        <div class="grid"><div class="tag">盾</div><select id="fci" onchange="calc()"></select><select id="ti" onchange="calc()"></select><div class="v-line"></div><input type="number" id="bAi" value="0.0" step="0.1" oninput="calc()"><input type="number" id="bKi" value="0.0" step="0.1" oninput="calc()"></div>
-        <div class="grid"><div class="tag">槍</div><select id="fcl" onchange="calc()"></select><select id="tl" onchange="calc()"></select><div class="v-line"></div><input type="number" id="bAl" value="0.0" step="0.1" oninput="calc()"><input type="number" id="bKl" value="0.0" step="0.1" oninput="calc()"></div>
-        <div class="grid"><div class="tag">弓</div><select id="fca" onchange="calc()"></select><select id="ta" onchange="calc()"></select><div class="v-line"></div><input type="number" id="bAa" value="0.0" step="0.1" oninput="calc()"><input type="number" id="bKa" value="0.0" step="0.1" oninput="calc()"></div>
+        <div class="grid">
+            <div class="tag">盾</div>
+            <select id="fci" onchange="calc()"></select>
+            <select id="ti" onchange="calc()"></select>
+            <div class="v-line"></div>
+            <input type="number" id="bAi" value="0.0" step="0.1" min="0" inputmode="decimal" placeholder="攻%" onfocus="cl(this)" onblur="re(this)" oninput="vM(this);calc()">
+            <input type="number" id="bKi" value="0.0" step="0.1" min="0" inputmode="decimal" placeholder="殺%" onfocus="cl(this)" onblur="re(this)" oninput="vM(this);calc()">
+        </div>
+        <div class="grid">
+            <div class="tag">槍</div>
+            <select id="fcl" onchange="calc()"></select>
+            <select id="tl" onchange="calc()"></select>
+            <div class="v-line"></div>
+            <input type="number" id="bAl" value="0.0" step="0.1" min="0" inputmode="decimal" placeholder="攻%" onfocus="cl(this)" onblur="re(this)" oninput="vM(this);calc()">
+            <input type="number" id="bKl" value="0.0" step="0.1" min="0" inputmode="decimal" placeholder="殺%" onfocus="cl(this)" onblur="re(this)" oninput="vM(this);calc()">
+        </div>
+        <div class="grid">
+            <div class="tag">弓</div>
+            <select id="fca" onchange="calc()"></select>
+            <select id="ta" onchange="calc()"></select>
+            <div class="v-line"></div>
+            <input type="number" id="bAa" value="0.0" step="0.1" min="0" inputmode="decimal" placeholder="攻%" onfocus="cl(this)" onblur="re(this)" oninput="vM(this);calc()">
+            <input type="number" id="bKa" value="0.0" step="0.1" min="0" inputmode="decimal" placeholder="殺%" onfocus="cl(this)" onblur="re(this)" oninput="vM(this);calc()">
+        </div>
     </div>
 
     <div class="section">
-        <span class="title">出征数：<span id="tDisp">100,000</span></span>
-        <input type="range" id="tr" min="1000" max="1000000" step="1000" value="100000" oninput="sy()">
+        <div style="display:flex; justify-content:space-between; align-items:center;">
+            <span class="title" style="margin:0;">出征数：<span id="tDisp">100,000</span></span>
+            <span id="remDisp" class="rem-pct">残り：0%</span>
+        </div>
+        <div style="display:flex; align-items:center; gap:8px; margin:4px 0;">
+            <button class="btn-s" onclick="st(-10)">−</button>
+            <input type="range" id="tr" min="1000" max="1000000" step="10" value="100000" oninput="sy()" style="flex:1;">
+            <button class="btn-s" onclick="st(10)">＋</button>
+        </div>
+
+        <div class="preset-row">
+            <button class="p-btn" onclick="setP(2,47,51)">2.47.51</button>
+            <button class="p-btn" onclick="setP(10,20,70)">10.20.70</button>
+            <button class="p-btn" onclick="setP(1,1,98)">1.1.98</button>
+        </div>
+        
         <div style="display:grid; grid-template-columns: 32px 60px 85px 1fr; gap:6px; align-items:center; margin-bottom:6px;">
-            <div class="tag">盾</div><div class="u-btn active">割合</div><input type="number" id="iI" value="33" oninput="hi('I')"><div id="sI"></div>
+            <div class="tag">盾</div><div class="u-btn active" id="mI" onclick="tg('I')">割合</div><input type="number" id="iI" value="33" oninput="vM(this);hi('I')"><div id="sI" style="font-size:10px; font-weight:700;"></div>
         </div>
         <div style="display:grid; grid-template-columns: 32px 60px 85px 1fr; gap:6px; align-items:center; margin-bottom:6px;">
-            <div class="tag">槍</div><div class="u-btn active">割合</div><input type="number" id="iL" value="33" oninput="hi('L')"><div id="sL"></div>
+            <div class="tag">槍</div><div class="u-btn active" id="mL" onclick="tg('L')">割合</div><input type="number" id="iL" value="33" oninput="vM(this);hi('L')"><div id="sL" style="font-size:10px; font-weight:700;"></div>
         </div>
         <div style="display:grid; grid-template-columns: 32px 60px 85px 1fr; gap:6px; align-items:center; margin-bottom:6px;">
-            <div class="tag">弓</div><div class="u-btn active">割合</div><input type="number" id="iA" value="34" oninput="hi('A')"><div id="sA"></div>
+            <div class="tag">弓</div><div class="u-btn active" id="mA" onclick="tg('A')">割合</div><input type="number" id="iA" value="34" oninput="vM(this);hi('A')"><div id="sA" style="font-size:10px; font-weight:700;"></div>
         </div>
     </div>
 
-    <div class="res-box"><span style="font-size:10px; font-weight:900;">推定合計ダメージ</span><div id="resDmg">0</div></div>
-    <div class="best-area"><span id="bT">---</span></div>
-    <button class="reset-btn" onclick="rs()">リセット</button>
+    <div class="res-box">
+        <span class="res-label">推定合計ダメージ</span>
+        <div id="resDmg">0</div>
+    </div>
+
+    <div class="best-area">
+        <span class="best-txt" id="bT">---</span>
+    </div>
+
+    <button class="reset-btn" onclick="rs()">数値をリセット</button>
+
+    <div class="log-section">
+        <details>
+            <summary style="font-size:10px; color:var(--sub-accent); cursor:pointer; font-weight:900;">📊 詳細ログを確認</summary>
+            <div class="log" id="log"></div>
+        </details>
+    </div>
 </div>
 
 <script src="data.js"></script>
