--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>熊ダメ計算機試作０号</title>
+    <title>熊ダメ計算機試作０号 v1.0.2</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,28 +14,37 @@
         <span class="sub-title" id="editionLabel" onclick="toggleEdition()">るびぃedition</span>
     </header>
 
+    <details class="help-box">
+        <summary class="help-summary">📖 ツールの使い方・仕様</summary>
+        <div class="help-content">
+            ・各兵種のFC段階とTier、集結バフを入力してください。<br>
+            ・出征数と割合（または人数）を調整するとダメージが自動計算されます。<br>
+            ・「推奨」は理論上最もダメージが出る比率です。
+        </div>
+    </details>
+
     <div class="section">
         <span class="title">兵士設定 & 集結バフ</span>
         <div class="grid">
             <div class="tag">盾</div>
-            <select id="fci" onchange="calc()"></select>
-            <select id="ti" onchange="calc()"></select>
+            <select id="fci" onchange="calc()" tabindex="-1"></select>
+            <select id="ti" onchange="calc()" tabindex="-1"></select>
             <div class="v-line"></div>
             <input type="number" id="bAi" value="0.0" step="0.1" min="0" inputmode="decimal" placeholder="攻%" onfocus="cl(this)" onblur="re(this)" oninput="vM(this);calc()">
             <input type="number" id="bKi" value="0.0" step="0.1" min="0" inputmode="decimal" placeholder="殺%" onfocus="cl(this)" onblur="re(this)" oninput="vM(this);calc()">
         </div>
         <div class="grid">
             <div class="tag">槍</div>
-            <select id="fcl" onchange="calc()"></select>
-            <select id="tl" onchange="calc()"></select>
+            <select id="fcl" onchange="calc()" tabindex="-1"></select>
+            <select id="tl" onchange="calc()" tabindex="-1"></select>
             <div class="v-line"></div>
             <input type="number" id="bAl" value="0.0" step="0.1" min="0" inputmode="decimal" placeholder="攻%" onfocus="cl(this)" onblur="re(this)" oninput="vM(this);calc()">
             <input type="number" id="bKl" value="0.0" step="0.1" min="0" inputmode="decimal" placeholder="殺%" onfocus="cl(this)" onblur="re(this)" oninput="vM(this);calc()">
         </div>
         <div class="grid">
             <div class="tag">弓</div>
-            <select id="fca" onchange="calc()"></select>
-            <select id="ta" onchange="calc()"></select>
+            <select id="fca" onchange="calc()" tabindex="-1"></select>
+            <select id="ta" onchange="calc()" tabindex="-1"></select>
             <div class="v-line"></div>
             <input type="number" id="bAa" value="0.0" step="0.1" min="0" inputmode="decimal" placeholder="攻%" onfocus="cl(this)" onblur="re(this)" oninput="vM(this);calc()">
             <input type="number" id="bKa" value="0.0" step="0.1" min="0" inputmode="decimal" placeholder="殺%" onfocus="cl(this)" onblur="re(this)" oninput="vM(this);calc()">
@@ -48,9 +57,9 @@
             <span id="remDisp" class="rem-pct">残り：0%</span>
         </div>
         <div style="display:flex; align-items:center; gap:8px; margin:4px 0;">
-            <button class="btn-s" onclick="st(-10)">−</button>
+            <button class="btn-s" onclick="st(-10)" tabindex="-1">−</button>
             <input type="range" id="tr" min="1000" max="1000000" step="10" value="100000" oninput="sy()" style="flex:1;">
-            <button class="btn-s" onclick="st(10)">＋</button>
+            <button class="btn-s" onclick="st(10)" tabindex="-1">＋</button>
         </div>
 
         <div class="preset-row">
@@ -60,13 +69,13 @@
         </div>
         
         <div style="display:grid; grid-template-columns: 32px 60px 85px 1fr; gap:6px; align-items:center; margin-bottom:6px;">
-            <div class="tag">盾</div><div class="u-btn active" id="mI" onclick="tg('I')">割合</div><input type="number" id="iI" value="33" oninput="vM(this);hi('I')"><div id="sI" style="font-size:10px; font-weight:700;"></div>
+            <div class="tag">盾</div><div class="u-btn active" id="mI" onclick="tg('I')">割合</div><input type="number" id="iI" value="33" oninput="vM(this);hi('I')"><div id="sI" style="font-size:10px; font-family:var(--font-mono); font-weight:700;"></div>
         </div>
         <div style="display:grid; grid-template-columns: 32px 60px 85px 1fr; gap:6px; align-items:center; margin-bottom:6px;">
-            <div class="tag">槍</div><div class="u-btn active" id="mL" onclick="tg('L')">割合</div><input type="number" id="iL" value="33" oninput="vM(this);hi('L')"><div id="sL" style="font-size:10px; font-weight:700;"></div>
+            <div class="tag">槍</div><div class="u-btn active" id="mL" onclick="tg('L')">割合</div><input type="number" id="iL" value="33" oninput="vM(this);hi('L')"><div id="sL" style="font-size:10px; font-family:var(--font-mono); font-weight:700;"></div>
         </div>
         <div style="display:grid; grid-template-columns: 32px 60px 85px 1fr; gap:6px; align-items:center; margin-bottom:6px;">
-            <div class="tag">弓</div><div class="u-btn active" id="mA" onclick="tg('A')">割合</div><input type="number" id="iA" value="34" oninput="vM(this);hi('A')"><div id="sA" style="font-size:10px; font-weight:700;"></div>
+            <div class="tag">弓</div><div class="u-btn active" id="mA" onclick="tg('A')">割合</div><input type="number" id="iA" value="34" oninput="vM(this);hi('A')"><div id="sA" style="font-size:10px; font-family:var(--font-mono); font-weight:700;"></div>
         </div>
     </div>
 
@@ -77,13 +86,14 @@
 
     <div class="best-area">
         <span class="best-txt" id="bT">---</span>
+        <span class="best-dmg" id="bDMG">推奨時の推定ダメ: 0</span>
     </div>
 
     <button class="reset-btn" onclick="rs()">数値をリセット</button>
 
     <div class="log-section">
         <details>
-            <summary style="font-size:10px; color:var(--sub-accent); cursor:pointer; font-weight:900;">📊 詳細ログを確認</summary>
+            <summary style="font-size:10px; color:var(--sub-accent); cursor:pointer; font-weight:900; -webkit-user-select:none;">📊 詳細ログを確認</summary>
             <div class="log" id="log"></div>
         </details>
     </div>
